force-app/main/default/objects/Opportunity/fields/AddMonth1__c.field-meta.xml
<CustomField>
    <fullName>AddMonth1__c</fullName>
    <formula>ADDMONTHS( CloseDate ,27)  + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddMonth1</label>
    <type>Date</type>
</CustomField>