force-app/main/default/objects/Opportunity/fields/AddMonth__c.field-meta.xml
<CustomField>
    <fullName>AddMonth__c</fullName>
    <formula>ADDMONTHS( CloseDate ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddMonth</label>
    <type>Date</type>
</CustomField>