force-app/main/default/objects/Opportunity/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>ApprovalStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>