force-app/main/default/objects/Opportunity/fields/Clock__c.field-meta.xml
<CustomField>
    <fullName>Clock__c</fullName>
    <formula>TIMEVALUE( NOW() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clock</label>
    <type>Time</type>
</CustomField>