force-app/main/default/objects/Opportunity/fields/Commission_is_Greater_Than_20K__c.field-meta.xml
<CustomField>
    <fullName>Commission_is_Greater_Than_20K__c</fullName>
    <formula>IF( Commission_Amount__c  &gt;= 20000, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission is Greater Than 20K</label>
    <type>Text</type>
</CustomField>