force-app/main/default/objects/Opportunity/fields/isWon__c.field-meta.xml
<CustomField>
    <fullName>isWon__c</fullName>
    <formula>ISPICKVAL( StageName , &apos;Closed Won&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isWon</label>
    <type>Checkbox</type>
</CustomField>