force-app/main/default/objects/Opportunity/fields/Name_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Month__c</fullName>
    <formula>CASE( MONTH( CloseDate ) , 
1, &apos;January&apos;, 
2, &apos;February&apos;,
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
 &apos;December&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of the Month</label>
    <type>Text</type>
</CustomField>