force-app/main/default/objects/Opportunity/fields/noOfDaysToClose__c.field-meta.xml
<CustomField>
    <fullName>noOfDaysToClose__c</fullName>
    <formula>CloseDate  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>noOfDaysToClose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>