force-app/main/default/objects/Opportunity/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <formula>TEXT(ABS(40)) &amp; &apos;; &apos;    &amp; TEXT(ABS(70)) &amp;  &apos;; &apos;  &amp; TEXT(ABS(-40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice</label>
    <type>Text</type>
</CustomField>