force-app/main/default/objects/Opportunity/validationRules/ApprovalRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovalRule</fullName>
    <active>true</active>
    <description>Closed opportunities with Amount greater than $50000 must be approved</description>
    <errorConditionFormula>AND(OR( ISPICKVAL( StageName , &apos;Closed Lost&apos;) , ISPICKVAL( StageName , &apos;Closed Won&apos;) ) ,
Amount  &gt; 50000,
NOT(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;)) )</errorConditionFormula>
    <errorMessage>Closed opportunities with Amount greater than $50000 must be approved</errorMessage>
</ValidationRule>