force-app/main/default/objects/Opportunity/validationRules/OpportunityAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityAmount</fullName>
    <active>true</active>
    <description>If the Stage is &apos;Closed Lost&apos;, &apos;Amount&apos; can not be empty</description>
    <errorConditionFormula>ISPICKVAL( StageName , &apos;Closed Lost&apos;) &amp;&amp;    ISBLANK( Amount )</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Please specify the Amount field</errorMessage>
</ValidationRule>